16433/buga/Align buttons and text all over the site

--- a/src/targets/national/styles/views/room-detail.less
+++ b/src/targets/national/styles/views/room-detail.less
@@ -48,7 +48,7 @@ hotel-room {
 
       pricing-info {
         border-left: none;
-
+        right:0;
         p {
           .value {
             color: @c-dark-grey;
