--- a/src/targets/national/styles/views/room-products.less
+++ b/src/targets/national/styles/views/room-products.less
@@ -3,6 +3,7 @@ room-products {
 
 	> ul {
 		> li {
+			padding:0;
 			border: 0;
 			border-bottom: 1px solid @c-light-grey;
 
@@ -168,7 +169,7 @@ room-products {
 				.action-buttons {
 					width: 50%;
 					float: left;
-					padding: 0 5px;
+					padding: 0 0 0 5px;
 					box-sizing: border-box;
 					text-align: right;
 
